--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <heaader class="logo">
+  <header class="logo">
     <img src="images/logo.svg" alt="logo" class="logo-img">
-  </heaader>
+  </header>
   <div class="main">
     <div class="left">
       <h1 class="heading">We're <br><span>Cooming <br>Soon</span> </h1>
@@ -23,9 +23,9 @@
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
       <form action="#">
-        <input type="email" name="email" id="email" class="email" placeholder="Email Address">
+        <input type="email" name="email" id="email" class="email" placeholder="Email Address"  aria-labelledby="email">
         <img src="images/icon-error.svg" alt="" class="error hide" id="error">
-        <button type="submit" class="submit" id="submit"><img src="images/icon-arrow.svg" alt=""></button>
+        <button type="submit" class="submit" id="submit" aria-labelledby="submit-btn"><img src="images/icon-arrow.svg" alt=""></button>
         <div class="error-description hide" id="error-description">Please enter valid email</div>
       </form>
     </div>
