--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <form action="#">
         <input type="email" name="email" id="email" class="email" placeholder="Email Address"  aria-labelledby="email">
         <img src="images/icon-error.svg" alt="" class="error hide" id="error">
-        <button type="submit" class="submit" id="submit" aria-labelledby="submit-btn"><img src="images/icon-arrow.svg" alt=""></button>
+        <button type="submit" class="submit" id="submit" aria-labelledby="submit"><img src="images/icon-arrow.svg" alt=""></button>
         <div class="error-description hide" id="error-description">Please enter valid email</div>
       </form>
     </div>
